make login module shrinking (when flex-shrink value equals 0, thet break layout on ie10 so flex: 0 1 auto fix this problem)

--- a/sass/modules/_login.scss
+++ b/sass/modules/_login.scss
@@ -2,10 +2,7 @@
   align-self: center;
   color: $sapling;
   font-size: 14px;
-
-  @include respond-below(sm) {
-    flex-shrink: 0;
-  }
+  flex: 0 1 auto;
 }
 
 .login-nav {
